src/component/multi_progress/tests/snapshots/envision__component__multi_progress__tests__component__view_empty.snap
---
source: src/component/multi_progress/tests.rs
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────────────────────────┐
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
