src/component/multi_progress/tests/snapshots/envision__component__multi_progress__tests__component__view_failed_item.snap
---
source: src/component/multi_progress/tests.rs
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────────────────────────┐
│✗ Item 1  Error: Connection lost                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
